src/flake8_annotations/snapshots/ruff__flake8_annotations__tests__allow_overload.snap
---
source: src/flake8_annotations/mod.rs
expression: checks
---
- kind:
    MissingReturnTypePublicFunction: bar
  location:
    row: 29
    column: 4
  end_location:
    row: 35
    column: 0
  fix: ~

