src/flake8_annotations/snapshots/ruff__flake8_annotations__tests__mypy_init_return.snap
---
source: src/flake8_annotations/mod.rs
expression: checks
---
- kind:
    MissingReturnTypeMagicMethod: __init__
  location:
    row: 5
    column: 4
  end_location:
    row: 9
    column: 7
  fix: ~
- kind:
    MissingReturnTypeMagicMethod: __init__
  location:
    row: 11
    column: 4
  end_location:
    row: 15
    column: 4
  fix: ~
- kind:
    MissingReturnTypePrivateFunction: __init__
  location:
    row: 40
    column: 0
  end_location:
    row: 41
    column: 3
  fix: ~

