src/flake8_annotations/snapshots/ruff__flake8_annotations__tests__suppress_none_returning.snap
---
source: src/flake8_annotations/mod.rs
expression: checks
---
- kind:
    MissingReturnTypePublicFunction: foo
  location:
    row: 45
    column: 0
  end_location:
    row: 49
    column: 7
  fix: ~
- kind:
    MissingReturnTypePublicFunction: foo
  location:
    row: 50
    column: 0
  end_location:
    row: 55
    column: 6
  fix: ~

